# agent-harness-generator

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  deny.toml  node_modules  package-lock.json
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  examples-packages-smoke.yml  publish.yml  security.yml
__tests__/: audit-deps.test.ts  cli-flags-completions.test.ts  harness-diag.test.ts  harness-export-config.test.ts  harness-threat-model.test.ts  harness-wizard.test.ts  healthcheck.test.ts  mcp-cmd.test.ts  pack-contents.test.ts  publish-cmd.test.ts  release-notes.test.ts  release.test.ts  sbom.test.ts
apps/web-ui/: index.html
crates/kernel-napi/: Cargo.toml
crates/kernel-wasm/: Cargo.toml
crates/poker-darwin/: README.md
docs/: LOOP_WORKER.md  OVERVIEW.md  SOTA_HORIZON.md  USAGE.md
docs/adrs/: ADR-001-goals-and-non-goals.md  ADR-002-kernel-boundary.md  ADR-002a-rust-wasm-napi-publishing-pipeline.md  ADR-003-generator-architecture.md  ADR-004-host-integration-model.md  ADR-005-marketplace-plugin-design.md  ADR-007-ci-guards.md  (+110 more)
examples-packages/: README.md
scripts/: CLUSTER.md  audit-deps.mjs  build-ordered.mjs  dev-toolkit.mjs  firestore-upload.mjs  gcp-cluster.mjs  gcp-perinstance-runner.sh  gcp-swebench-runner.sh  gcp-tbench-runner.sh  healthcheck.mjs  nightly-sota-gate.test.mjs  nightly-sota-review.mjs  path-guard.mjs  preflight.mjs  publish-dryrun.mjs  publish-examples-batch.mjs  publish-examples-helpers.mjs  release-notes.mjs  release.mjs  sbom.mjs  sota-attest.mjs  sota-attest.test.mjs  tbench-gcp.mjs  validate-gcp-secrets.mjs  verify-all-hosts.mjs  write-example-packages.mjs
(+545 files in other folders)
