[package]
name = "ruflo-kernel-napi"
version.workspace = true
publish = false  # napi/wasm binding crate — built into @metaharness/kernel (npm), never published to crates.io (GH cargo-deny: lets allow-wildcard-paths cover the internal ruflo-kernel path dep)
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "NAPI-RS bindings for ruflo-kernel"

[lib]
crate-type = ["cdylib"]

[dependencies]
ruflo-kernel = { path = "../kernel" }
napi.workspace = true
napi-derive.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
napi-build = "2"
